--- a/django-openstack/src/django_openstack/locale/ja/LC_MESSAGES/django.po
+++ b/django-openstack/src/django_openstack/locale/ja/LC_MESSAGES/django.po
@@ -8,11 +8,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-06-07 10:22+0900\n"
+"POT-Creation-Date: 2011-06-07 14:25+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Last-Translator: Takeshi Nakajima <tnakaji@midokura.jp>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: Japanese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -21,11 +21,13 @@ msgstr ""
 #: management/commands/createnovausers.py:31
 msgid "Creates nova users for all users in the django auth database."
 msgstr ""
+"Djangoの認証データベース内のすべてのユーザーに対してnovaユーザーを作成しま"
+"す。"
 
 #: management/commands/createnovausers.py:38
 #, python-format
 msgid "creating user %s... "
-msgstr ""
+msgstr "ユーザ%sを作成中..."
 
 #: nova/forms.py:64 nova/forms.py:78
 msgid "none available"
@@ -34,136 +36,137 @@ msgstr ""
 #: nova/forms.py:182
 #, python-format
 msgid "A key named %s already exists."
-msgstr ""
+msgstr "%sという名前のキーは既に存在します。"
 
 #: nova/forms.py:196
 #, python-format
 msgid "A security group named %s already exists."
-msgstr ""
+msgstr "%sというセキュリティグループは既に存在します。"
 
 #: nova/shortcuts.py:43
 msgid "User not authenticated"
-msgstr ""
+msgstr "ユーザが認証されておりません。"
 
 #: nova/shortcuts.py:50
 #, python-format
 msgid "Project %s does not exist."
-msgstr ""
+msgstr "プロジェクト%sは存在しません。"
 
 #: nova/views/admin.py:96
 #, python-format
 msgid "Successfully started VPN for project %(proj)s."
-msgstr ""
+msgstr "正常にVPNプロジェクト%(proj)sを開始しました。"
 
 #: nova/views/admin.py:100
 #, python-format
 msgid "Unable to start VPN for the project %(proj)s: %(code)s - %(msg)s"
 msgstr ""
+"プロジェクト%(proj)s: %(code)s - %(msg)sのVPNを開始する事ができませんでした。"
 
 #: nova/views/admin.py:140
 #, python-format
 msgid "Successfully modified the project %(proj)s."
-msgstr ""
+msgstr "プロジェクト%(proj)sを正常に修正しました。"
 
 #: nova/views/admin.py:145
 #, python-format
 msgid "Unable modify the project %(proj)s: %(code)s - %(msg)s"
-msgstr ""
+msgstr "プロジェクト%(proj)s: %(code)s - %(msg)sを修正できませんでした。"
 
 #: nova/views/images.py:94
 #, python-format
 msgid "Unable to launch: %s"
-msgstr ""
+msgstr "%sを起動できません。"
 
 #: nova/views/images.py:106
 #, python-format
 msgid "Instance %s launched."
-msgstr ""
+msgstr "インスタンス%sが開始しました。"
 
 #: nova/views/images.py:157
 #, python-format
 msgid "Unable to deregister image: %s"
-msgstr ""
+msgstr "イメージ%sの登録削除ができませんでした。"
 
 #: nova/views/images.py:163
 #, python-format
 msgid "Image %s has been successfully deregistered."
-msgstr ""
+msgstr "イメージ%sが正常に登録削除されました。"
 
 #: nova/views/images.py:188
 #, python-format
 msgid "Unable to make image private: %s"
-msgstr ""
+msgstr "イメージ%sを非公開にすることができません。"
 
 #: nova/views/images.py:201
 #, python-format
 msgid "Unable to make image public: %s"
-msgstr ""
+msgstr "イメージ%sを公開できません。"
 
 #: nova/views/images.py:226
 #, python-format
 msgid "Unable to update image: %s"
-msgstr ""
+msgstr "イメージ%sを更新できません。"
 
 #: nova/views/images.py:229
 #, python-format
 msgid "Image %s has been updated."
-msgstr ""
+msgstr "イメージ%sが更新されました。"
 
 #: nova/views/instances.py:145
 #, python-format
 msgid "Unable to terminate %(inst)s: %(msg)s"
-msgstr ""
+msgstr "（%(inst)s: %(msg)sを停止する事ができません。"
 
 #: nova/views/instances.py:156
 #, python-format
 msgid "Instance %(inst)s has been terminated."
-msgstr ""
+msgstr "インスタンス%(inst)sは停止されました。"
 
 #: nova/views/instances.py:220
 #, python-format
 msgid "Unable to update instance %(inst)s: %(msg)s"
-msgstr ""
+msgstr "インスタンス%(inst)s: %(msg)sを更新する事ができません。"
 
 #: nova/views/instances.py:232
 #, python-format
 msgid "Instance %(inst)s has been updated."
-msgstr ""
+msgstr "インスタンス%(inst)sが更新されました。"
 
 #: nova/views/keypairs.py:67
 #, python-format
 msgid "Unable to create key: %s"
-msgstr ""
+msgstr "キー%sを作成できません。"
 
 #: nova/views/keypairs.py:112
 #, python-format
 msgid "Unable to delete key: %s"
-msgstr ""
+msgstr "キー%sを削除できません。"
 
 #: nova/views/keypairs.py:117
 #, python-format
 msgid "Key %s has been successfully deleted."
-msgstr ""
+msgstr "キー%sは正常に削除されました。"
 
 #: nova/views/regions.py:39
 #, python-format
 msgid "You are now using the region \"%s\"."
-msgstr ""
+msgstr "リージョン\"%s\"を使用中です。"
 
 #: nova/views/securitygroups.py:85
 #, python-format
 msgid "Unable to create security group: %s"
-msgstr ""
+msgstr "セキュリティグループ%sを作成できません。"
 
 #: nova/views/securitygroups.py:92
 #, python-format
 msgid "Security Group %s has been succesfully created."
-msgstr ""
+msgstr "セキュリティグループ%sが正常に作成されました。"
 
 #: nova/views/securitygroups.py:125
 #, python-format
 msgid "Unable to authorize: %s"
-msgstr ""
+msgstr "%sを認証できません。"
 
 #: nova/views/securitygroups.py:136
 #, python-format
@@ -171,11 +174,13 @@ msgid ""
 "Security Group %(grp)s: Access to %(proto)s ports %(fr)d - %(to)d has been "
 "authorized."
 msgstr ""
+"セキュリティグループ %(grp)s の %(proto)s ポート %(fr)d - %(to)d へのアクセス"
+"は許可されました。"
 
 #: nova/views/securitygroups.py:177
 #, python-format
 msgid "Unable to revoke: %s"
-msgstr ""
+msgstr "%sをリボーク(無効化)できません。"
 
 #: nova/views/securitygroups.py:186
 #, python-format
@@ -183,41 +188,43 @@ msgid ""
 "Security Group %(grp)s: Access to %(proto)s ports %(fr)d - %(to)d has been "
 "revoked."
 msgstr ""
+"セキュリティグループ %(grp)s の %(proto)s ポート %(fr)d - %(to)d へのアクセス"
+"はリボーク(無効化)されました。"
 
 #: nova/views/securitygroups.py:210
 #, python-format
 msgid "Unable to delete security group: %s"
-msgstr ""
+msgstr "セキュリティグループ%sを削除できません"
 
 #: nova/views/securitygroups.py:215
 #, python-format
 msgid "Security Group %s was successfully deleted."
-msgstr ""
+msgstr "セキュリティグループ%sが正常に削除されました。"
 
 #: nova/views/volumes.py:69
 #, python-format
 msgid "Unable to create volume: %s"
-msgstr ""
+msgstr "ボリューム%sを作成できません。"
 
 #: nova/views/volumes.py:77
 #, python-format
 msgid "Volume %(id)s %(name)s has been successfully created."
-msgstr ""
+msgstr "ボリューム %(id)s %(name)s は正常に作成されました。"
 
 #: nova/views/volumes.py:108
 #, python-format
 msgid "Unable to delete volume: %s"
-msgstr ""
+msgstr "ボリューム%sを削除できません。"
 
 #: nova/views/volumes.py:114
 #, python-format
 msgid "Volume %s has been successfully deleted."
-msgstr ""
+msgstr "ボリューム%sが正常に削除されました。"
 
 #: nova/views/volumes.py:138
 #, python-format
 msgid "Unable to attach volume: %s"
-msgstr ""
+msgstr "ボリューム%sを付与できません。"
 
 #: nova/views/volumes.py:145
 #, python-format
@@ -225,62 +232,65 @@ msgid ""
 "Volume %s is scheduled to be attached.  If it doesn't become attached in two "
 "minutes,  please try again (you may need to specify a different device)."
 msgstr ""
+"ボリューム%sが付与される予定です。それが2分に実行されない場合は、もう一度お試"
+"しください。（別のデバイスを指定する必要がある場合があります。）"
 
 #: nova/views/volumes.py:179
 #, python-format
 msgid "Unable to detach volume: %s"
-msgstr ""
+msgstr "ボリューム%sを取り外す事ができません。"
 
 #: nova/views/volumes.py:185
 #, python-format
 msgid "Volume %s has been successfully detached."
-msgstr ""
+msgstr "ボリューム%sが正常に取り外されました。"
 
 #: templates/admin/django_openstack/nova/project/delete_project.html:13
 msgid "Delete Project"
-msgstr ""
+msgstr "プロジェクトを削除"
 
 #: templates/admin/django_openstack/nova/project/delete_project.html:14
 msgid "Do you really want to delete this project?<"
-msgstr ""
+msgstr "本当にこのプロジェクトを削除しますか？<"
 
 #: templates/admin/django_openstack/nova/project/delete_project_user.html:8
 msgid "Delete"
-msgstr ""
+msgstr "削除"
 
 #: templates/admin/django_openstack/nova/project/delete_project_user.html:13
 #: templates/admin/django_openstack/nova/project/project_user.html:67
 msgid "Remove User From Project"
-msgstr ""
+msgstr "プロジェクトからユーザを削除します。"
 
 #: templates/admin/django_openstack/nova/project/delete_project_user.html:14
 msgid "Do you really want to remove this user from project?"
-msgstr ""
+msgstr "本当にこのユーザをプロジェクトから削除しますか？"
 
 #: templates/admin/django_openstack/nova/project/send_credentials.html:46
 #: templates/admin/django_openstack/nova/project/send_credentials.html:81
 msgid "Send Credentials"
-msgstr ""
+msgstr "認証情報を送信"
 
 #: templates/admin/django_openstack/nova/project/send_credentials.html:47
+#, python-format
 msgid ""
-"Select which users you would like to send credentials to from the "
-"'{{ project.projectname }}' project."
-msgstr ""
+"\"Select which users you would like to send credentials to from the "
+"'%(proj)s' project.\""
+msgstr "'%(proj)s'より、認証情報を送信するユーザを選択してください。"
 
 #: templates/admin/django_openstack/nova/project/send_credentials.html:49
 msgid "Credentials sent successfully"
-msgstr ""
+msgstr "認証情報が正常に送信されました。"
 
 #: templates/django_openstack/nova/credentials/expired.html:6
 msgid "Expired Token"
-msgstr ""
+msgstr "トークンの期限が切れています。"
 
 #: templates/django_openstack/nova/credentials/expired.html:10
 msgid "The link you clicked has expired."
-msgstr ""
+msgstr "クリックしたリンクは有効期限が切れています。"
 
-#: templates/django_openstack/nova/credentials/expired.html:11
+#: templates/django_openstack/nova/credentials/expired.html:12
 #, python-format
 msgid ""
 "This credentials download link you have reached\n"
@@ -289,135 +299,151 @@ msgid ""
 "      you need to download your credentials again, please contact the\n"
 "      %(brand)s support team."
 msgstr ""
+"指定された認証資格のダウンロードリンクは、無効か有効期限が切れています。\n"
+"     各リンクは一度だけ使用する事ができます。再度資格情報をダウンロードする必"
+"要が\n"
+"     ある場合は、%(brand)sのサポートにお問い合わせください。"
 
 #: templates/django_openstack/nova/images/_list.html:70
 msgid "Make Private"
-msgstr ""
+msgstr "非公開にする"
 
 #: templates/django_openstack/nova/images/_list.html:72
 msgid "Make Public"
-msgstr ""
+msgstr "公開する"
 
 #: templates/django_openstack/nova/images/_list.html:80
 msgid "Remove Image"
-msgstr ""
+msgstr "イメージを削除する"
 
 #: templates/django_openstack/nova/images/_list.html:110
 msgid "No images currently available."
-msgstr ""
+msgstr "現在イメージがありません。"
 
 #: templates/django_openstack/nova/images/edit.html:13
 msgid "Edit Image"
-msgstr ""
+msgstr "イメージを編集する"
 
 #: templates/django_openstack/nova/images/edit.html:14
 msgid ""
 "From this page you can edit the name and description of an image that "
 "belongs to you."
 msgstr ""
+"このページでは、ご自身が所有するイメージの名前と説明文を編集する事ができま"
+"す。"
 
 #: templates/django_openstack/nova/images/edit.html:18
 msgid "Edit Image:"
-msgstr ""
+msgstr "イメージを編集："
 
 #: templates/django_openstack/nova/images/edit.html:29
 msgid "Update Image"
-msgstr ""
+msgstr "イメージを更新"
 
 #: templates/django_openstack/nova/images/index.html:4
 msgid "Launch an Image"
-msgstr ""
+msgstr "イメージを起動します。"
 
 #: templates/django_openstack/nova/images/index.html:14
 msgid "Images"
-msgstr ""
+msgstr "イメージ"
 
 #: templates/django_openstack/nova/images/index.html:15
 msgid ""
 "Images are snapshots of running systems which can easily be deployed to run "
 "one or more instances."
 msgstr ""
+"イメージとは、実行するシステムのスナップショットで、1つもしくは複数のインスタ"
+"ンスとして容易に実行する事ができます。"
 
 #: templates/django_openstack/nova/images/launch.html:13
 #: templates/django_openstack/nova/images/launch.html:21
 msgid "Launch Image"
-msgstr ""
+msgstr "イメージを起動します。"
 
 #: templates/django_openstack/nova/images/launch.html:14
 msgid ""
 "You can launch up to five instances of an image at a time. Some images allow "
 "for custom configuration to be passed in via User data."
 msgstr ""
+"1つのイメージを一度に5つのインスタンスとして起動する事ができます。一部のイ"
+"メージは、ユーザデータとしてカスタム設定を送信する事ができます。"
 
 #: templates/django_openstack/nova/images/launch.html:23
 msgid "Location"
-msgstr ""
+msgstr "ロケーション"
 
 #: templates/django_openstack/nova/instances/_instances_list.html:102
 msgid ""
 "No instances are currently running. You may start a new instance from the"
 msgstr ""
+"インスタンスが現在実行されていません。... より新しいインスタンスを起動できま"
+"す。"
 
 #: templates/django_openstack/nova/instances/detail_list.html:10
 msgid "Instance ID:"
-msgstr ""
+msgstr "インスタンスID:"
 
 #: templates/django_openstack/nova/instances/detail_list.html:11
 msgid "Here you can see up to the minute performance data about your instance."
-msgstr ""
+msgstr "各インスタンスの分単位のパーフォーマンスデータを見る事ができます。"
 
 #: templates/django_openstack/nova/instances/detail_list.html:18
 #: templates/django_openstack/nova/instances/edit.html:18
 msgid "Edit Instance:"
-msgstr ""
+msgstr "インスタンスを編集："
 
 #: templates/django_openstack/nova/instances/detail_list.html:29
 #: templates/django_openstack/nova/instances/edit.html:29
 msgid "Update Instance"
-msgstr ""
+msgstr "インスタンスを更新"
 
 #: templates/django_openstack/nova/instances/edit.html:13
 msgid "Edit Instance"
-msgstr ""
+msgstr "インスタンスを編集"
 
 #: templates/django_openstack/nova/instances/edit.html:14
 msgid ""
 "From this page you can give your instance an alias, so you don't have to "
 "remember its unique id."
 msgstr ""
+"このページでは、インスタンスにエーリアスを設定する事ができ、独自のIDの代わり"
+"に覚えておく事ができます。"
 
 #: templates/django_openstack/nova/instances/index.html:11
 msgid "Instances"
-msgstr ""
+msgstr "インスタンス"
 
 #: templates/django_openstack/nova/instances/index.html:12
 msgid ""
 "Instances are virtual servers launched from images. You can launch instances "
 "from the"
 msgstr ""
+"インスタンスは、イメージから起動する仮想サーバーです。... よりインスタンスを"
+"起動する事ができます。"
 
 #: templates/django_openstack/nova/instances/index.html:22
 msgid "Are you sure you wish to terminate instance"
-msgstr ""
+msgstr "インスタンスを終了して宜しいですか？"
 
 #: templates/django_openstack/nova/instances/index.html:26
 msgid ""
 "A connection error has occurred. Please ensure you are still connected to "
 "VPN."
-msgstr ""
+msgstr "通信エラーが発生しました。VPNに接続しているか確認してください。"
 
 #: templates/django_openstack/nova/instances/performance.html:10
 #, python-format
 msgid "Instance ID: %(instance.id)s Performance\" "
-msgstr ""
+msgstr "インスタンスID: %(instance.id)s Performance\" "
 
 #: templates/django_openstack/nova/keypairs/_list.html:28
 msgid "No key pairs currently exist."
-msgstr ""
+msgstr "キーペアが存在しません。"
 
 #: templates/django_openstack/nova/keypairs/index.html:13
 msgid "Keys"
-msgstr ""
+msgstr "キー"
 
 #: templates/django_openstack/nova/keypairs/index.html:14
 msgid ""
@@ -426,34 +452,39 @@ msgid ""
 "private key (a pem file). <em>Protect and use the key as a normal private "
 "key.</em>"
 msgstr ""
+"キーペアは、ssh形式の資格情報で、イメージを起動した時に、挿入されます。新しい"
+"キーペアを作成するとき、公開キーを登録し、秘密キー(pemファイル)をダウンロード"
+"します。<em>これは、通常の秘密キーの様に保護した上でご使用ください。</em>"
 
 #: templates/django_openstack/nova/keypairs/index.html:36
 msgid "Are you sure you wish to delete key"
-msgstr ""
+msgstr "キーを削除してよろしいですか。"
 
 #: templates/django_openstack/nova/projects/edit_user.html:24
 msgid "Edit User Roles"
-msgstr ""
+msgstr "ユーザ資格の編集"
 
 #: templates/django_openstack/nova/projects/edit_user.html:25
 msgid "From here you can edit multiple user roles."
-msgstr ""
+msgstr "ここで、複数のユーザ資格を編集できます。"
 
 #: templates/django_openstack/nova/projects/edit_user.html:35
 msgid "Edit Roles for User:"
-msgstr ""
+msgstr "ユーザのロールの編集："
 
 #: templates/django_openstack/nova/projects/edit_user.html:67
 #: templates/django_openstack/nova/projects/manage.html:39
 msgid "No users are currently associated with this project."
-msgstr ""
+msgstr "ユーザがいない現在、このプロジェクトに関連付けられている。"
 
 #: templates/django_openstack/nova/projects/index.html:14
 #, python-format
 msgid ""
-"Welcome to the <span>%(project.projectname|capfirst)s</span> Overview.  From "
-"here you can manage your instances, images, keys, and security groups."
+"Welcome to the <span>%(proj)s</span> Overview.  From here you can manage "
+"your instances, images, keys, and security groups."
 msgstr ""
+"<span>%(proj)s</span>のオーバービューページにようこそ。ここで、インスタンス、"
+"イメージ、キー、セキュリティーグループを管理できます。"
 
 #: templates/django_openstack/nova/projects/index.html:15
 msgid ""
@@ -462,31 +493,35 @@ msgid ""
 "Euca2oolsGuide_v1.1\">download euca2ools</a> and use them with your x509 "
 "credentials."
 msgstr ""
+"コマンドライン形式の管理ツールで利用開始される場合は、<a target=\"_blank\" "
+"href=\"http://open.eucalyptus.com/wiki/Euca2oolsGuide_v1.1\">download "
+"euca2ools</a>でツールをダウンロードし、あなたのx509資格情報を利用してお使い頂"
+"けます。"
 
 #: templates/django_openstack/nova/projects/index.html:21
 msgid "Generate X509 credentials."
-msgstr ""
+msgstr "X509資格情報生成する。"
 
 #: templates/django_openstack/nova/projects/index.html:22
 msgid "View Instances"
-msgstr ""
+msgstr "インスタンスを表示する"
 
 #: templates/django_openstack/nova/projects/index.html:23
 msgid "View Images."
-msgstr ""
+msgstr "イメージの表示"
 
 #: templates/django_openstack/nova/projects/manage.html:8
 msgid "Manage Users and Roles"
-msgstr ""
+msgstr "ユーザとその資格の管理"
 
 #: templates/django_openstack/nova/projects/manage.html:9
 msgid "From here you can manage users and roles."
-msgstr ""
+msgstr "ここより、ユーザとその資格を管理できます。"
 
 #: templates/django_openstack/nova/securitygroups/detail.html:19
 #, python-format
 msgid " Security Group: %(securitygroup.name)s "
-msgstr ""
+msgstr "セキュリティグループは、：%(securitygroup.name)s です"
 
 #: templates/django_openstack/nova/securitygroups/detail.html:20
 msgid ""
@@ -494,10 +529,13 @@ msgid ""
 "port forwarding. For instance<br /> [tcp, 80, 80] will allow access to HTTP "
 "from devices outside this security group."
 msgstr ""
+"ポートフォワーディングを認可・不許可する事で、セキュリティーグループのプロト"
+"コルを追加・削除します。　例 : <br /> [tcp, 80, 80] と設定することでこのセ"
+"キュリティーグループ外のデバイスからHTTPアクセスを許可する事ができます。"
 
 #: templates/django_openstack/nova/securitygroups/index.html:19
 msgid "Security Groups"
-msgstr ""
+msgstr "セキュリティグループ"
 
 #: templates/django_openstack/nova/securitygroups/index.html:20
 msgid ""
@@ -505,10 +543,13 @@ msgid ""
 "other groups as well as the internet.  All ports/protocols are denied by "
 "default."
 msgstr ""
+"セキュリティーグループは、他のグループやインターネットより起動されているイン"
+"スタンスへのアクセス許可を設定するファイヤーウォールのルールです。初期設定値"
+"は、全てのポート/プロトコルを拒否する様になっています。"
 
 #: templates/django_openstack/nova/volumes/index.html:8
 msgid "Volumes"
-msgstr ""
+msgstr "ボリューム"
 
 #: templates/django_openstack/nova/volumes/index.html:9
 msgid ""
@@ -517,15 +558,19 @@ msgid ""
 "is recommended). A volume may only be attached to a single instance at a "
 "time."
 msgstr ""
+"ボリュームは、パーシスタントブロックストレージを提供します。新しいボリューム"
+"を作成すると、ブロックデバイスが確保され、利用されるファイルシステムにそのデ"
+"バイスをフォーマットする事ができます。(ext3が推奨フォーマットです。)1つのボ"
+"リュームを毎回1つのインスタンスにのみ付与する事ができます。"
 
 #: templates/django_openstack/nova/volumes/index.html:59
 msgid "No volumes currently exist."
-msgstr ""
+msgstr "ボリュームが存在しません。"
 
 #: templates/django_openstack/nova/volumes/index.html:68
 msgid "Create New Volume"
-msgstr ""
+msgstr "新規ボリュームを作成する。"
 
 #: templates/django_openstack/nova/volumes/index.html:79
 msgid "Attach Volume"
-msgstr ""
+msgstr "ボリュームを付与する。"
