updating README to explain project/repo structure

--- a/README
+++ b/README
@@ -24,3 +24,24 @@ For blueprints and feature specifications:
 For issue tracking:
 
  * https://bugs.launchpad.net/openstack-dashboard
+
+Project Structure and Testing:
+------------------------------
+
+This project is a bit different from other Openstack projects in that it has
+two very distinct components underneath it: django-openstack, and
+openstack-dashboard.
+
+django-openstack holds the generic libraries and components that can be
+used in any Django project. In testing, this component is set up with
+buildout (see run_tests.sh), and any dependencies that get added need to
+be added to the django-openstack/buildout.cfg file.
+
+openstack-dashboard is a reference django project that uses django-openstack
+and is built with a virtualenv and tested through that environment. If
+depdendencies are added that the reference django project needs, they
+should be added to openstack-dashboard/tools/pip-requires.
+
+The run_tests.sh script invokes tests and analysis on both of these
+components in it's process, and is what Jenkins uses to verify the
+stability of the project.
