--- a/django-openstack/README
+++ b/django-openstack/README
@@ -1,19 +1,19 @@
-OpenStack Django-Nova
+Django-OpenStack
 ---------------------
 
-The Django-Nova project is a Django module that is used to provide web based
-interactions with the OpenStack Nova cloud controller.
+The Django-OpenStack project is a Django module that is used to provide web based
+interactions with an OpenStack cloud.
 
 There is a reference implementation that uses this module located at:
 
-    http://launchpad.net/openstack-dashboard
+    http://launchpad.net/horizon
 
 It is highly recommended that you make use of this reference implementation
 so that changes you make can be visualized effectively and are consistent.
 Using this reference implementation as a development environment will greatly
-simplify development of the django-nova module.
+simplify development of the django-openstack module.
 
-Of course, if you are developing your own Django site using django-nova, then
+Of course, if you are developing your own Django site using django-openstack, then
 you can disregard this advice.
 
 
@@ -21,7 +21,7 @@ you can disregard this advice.
 Getting Started
 ---------------
 
-Django-Nova uses Buildout (http://www.buildout.org/) to manage local
+Django-OpenStack uses Buildout (http://www.buildout.org/) to manage local
 development.  To configure your local Buildout environment first install the following
 system-level dependencies:
   * python-dev
