Adding setup instructions to the quickstart docs.
Implements blueprint horizon-dev-setup-doc-update.

Change-Id: I0d16a5db7b8b7b670e76a99792f744e6ff0e00a2

--- a/README
+++ b/README
@@ -28,7 +28,7 @@ For issue tracking:
 Project Structure and Testing:
 ------------------------------
 
-This project is a bit different from other Openstack projects in that it has
+This project is a bit different from other OpenStack projects in that it has
 two very distinct components underneath it: ``horizon``, and
 ``openstack-dashboard``.
 
