Adds test (copied from Glance/Keystone) to verify authors file is up-to-date.
Change-Id: I8b2987d238e8f75e824936659888ae3f68c18ce0

--- a/AUTHORS
+++ b/AUTHORS
@@ -13,17 +13,22 @@ Ewan Mellor <ewan.mellor@citrix.com>
 Gabriel Hurley <gabriel@strikeawe.com>
 Ivan Kolodyazhny <e0ne@e0ne.info>
 Jake Dahn <admin@jakedahn.com>
+jakedahn <jake@ansolabs.com>
+Jake Dahn <jake@ansolabs.com>
 Jake Zukowski <jake@ponyloaf.com>
 James E. Blair <james.blair@rackspace.com>
+jaypipes <jaypipes@gmail.com>
 Jay Pipes <jaypipes@gmail.com>
 jeffjapan <jeffjapan@gmail.com>
 Jeffrey Wilcox <jeffjapan@gmail.com>
 Jesse Andrews <anotherjesse@gmail.com>
 Joe Heck <heckj@mac.com>
+Joseph Heck <heckj@mac.com>
 Julien Danjou <julien.danjou@enovance.com>
 Ken Pepple <ken.pepple@gmail.com>
 lzyeval <lzyeval@gmail.com>
 Mark Gius <launchpad@markgius.com>
+Mark Gius <mgius7096@gmail.com>
 Michael Szilagyi <mszilagyi@gmail.com>
 Mike Perez <thingee@gmail.com>
 Mike Scherbakov <mihgen@gmail.com>
@@ -38,6 +43,7 @@ Todd Willey <todd@ansolabs.com>
 Tomasz 'Zen' Napierala <tomasz@napierala.org>
 Tres Henry <tres@treshenry.net>
 Vishvananda Ishaya <vishvananda@gmail.com>
+Yuriy Taraday <yorik.sar@gmail.com>
 Yuriy Taraday <yorik@ytaraday>
 ZhongYue Luo <lzyeval@gmail.com>
 Ziad Sawalha <github@highbridgellc.com>
