Added package_data to horizon
Several files necessary for horizon are not included when installing/distributing the package.
This patch includes the following extensions:
*.html *.js *.csv *.template *.mo

Patch Set 2: Added info to AUTHORS file

Change-Id: Id8a6a007eff17edbe77d2ead236fa2067231248f

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,6 +11,8 @@ Duncan McGreggor <duncan@dreamhost.com>
 Emma Steimann <emmasteimann@gmail.com>
 Ewan Mellor <ewan.mellor@citrix.com>
 Gabriel Hurley <gabriel@strikeawe.com>
+Ghe Rivero <ghe@debian.org>
+Ghe Rivero <ghe.rivero@stackops.com>
 Ivan Kolodyazhny <e0ne@e0ne.info>
 Jake Dahn <admin@jakedahn.com>
 jakedahn <jake@ansolabs.com>
