Return proper error message when adding security group with no params
 * fixes bug 944469

Change-Id: I03ba89de135a2d7e2e9f6359ec652b069e55d089

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,6 @@
 aababilov <aababilov@griddynamics.com>
 Andrews Medina <andrewsmedina@gmail.com>
+Andy Chong <andycjw@gmail.com>
 Anthony Young <sleepsonthefloor@gmail.com>
 Arvind Somya <asomya@cisco.com>
 Carlo Truijllo <truijllo@crs4.it>
