Remove trailing whitespaces in regular file
Change-Id: I2317eb6d87054af4b04c91ef216a4c46c3dec423

--- a/AUTHORS
+++ b/AUTHORS
@@ -13,6 +13,7 @@ Ewan Mellor <ewan.mellor@citrix.com>
 Gabriel Hurley <gabriel@strikeawe.com>
 Ghe Rivero <ghe@debian.org>
 Ghe Rivero <ghe.rivero@stackops.com>
+Hengqing Hu <hudayou@hotmail.com>
 Ivan Kolodyazhny <e0ne@e0ne.info>
 Jake Dahn <admin@jakedahn.com>
 jakedahn <jake@ansolabs.com>
