Remove old Glance variables from openrc template
Fixes bug 947352

Change-Id: I3d8a9f26c5fc3e18702bbfe288552d89ad8dd914

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,6 +6,7 @@ Arvind Somya <asomya@cisco.com>
 Carlo Truijllo <truijllo@crs4.it>
 Chuck Short <chuck.short@canonical.com>
 Cole Robinson <crobinso@redhat.com>
+Dean Troyer <dtroyer@gmail.com>
 Devin Carlen <devin.carlen@gmail.com>
 Doug Doan <dougdoan@gmail.com>
 Duncan McGreggor <duncan@dreamhost.com>
