Fix typo termiante to terminate
Change-Id: Iad6284a3b5cb31e970c12a7cc5e480064d3d7a2a

--- a/horizon/locale/pl/LC_MESSAGES/django.po
+++ b/horizon/locale/pl/LC_MESSAGES/django.po
@@ -628,7 +628,7 @@ msgid "Delete on Terminate"
 msgstr "Usuń projekt"
 
 #: dashboards/nova/images_and_snapshots/images/forms.py:114
-msgid "Delete volume on instance termiante"
+msgid "Delete volume on instance terminate"
 msgstr ""
 
 #: dashboards/nova/images_and_snapshots/images/forms.py:149
