--- a/horizon/locale/ja/LC_MESSAGES/django.po
+++ b/horizon/locale/ja/LC_MESSAGES/django.po
@@ -636,7 +636,7 @@ msgid "Delete on Terminate"
 msgstr "削除"
 
 #: dashboards/nova/images_and_snapshots/images/forms.py:114
-msgid "Delete volume on instance termiante"
+msgid "Delete volume on instance terminate"
 msgstr ""
 
 #: dashboards/nova/images_and_snapshots/images/forms.py:149
