--- a/horizon/locale/pt/LC_MESSAGES/django.po
+++ b/horizon/locale/pt/LC_MESSAGES/django.po
@@ -590,7 +590,7 @@ msgid "Delete on Terminate"
 msgstr ""
 
 #: dashboards/nova/images_and_snapshots/images/forms.py:114
-msgid "Delete volume on instance termiante"
+msgid "Delete volume on instance terminate"
 msgstr ""
 
 #: dashboards/nova/images_and_snapshots/images/forms.py:149
