--- a/horizon/locale/zh_TW/LC_MESSAGES/django.po
+++ b/horizon/locale/zh_TW/LC_MESSAGES/django.po
@@ -598,7 +598,7 @@ msgid "Delete on Terminate"
 msgstr ""
 
 #: dashboards/nova/images_and_snapshots/images/forms.py:126
-msgid "Delete volume on instance termiante"
+msgid "Delete volume on instance terminate"
 msgstr ""
 
 #: dashboards/nova/images_and_snapshots/images/forms.py:161
