Update for AUTHORS file to remove duplicate entries Multiple emails per person are mapped in .mailmap file Fixes bug 945268
As primary email I've assumed the last one used in a commit.

Change-Id: I755e98ccf82dc9a680bbfb103a0703c4d84d3e34

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-aababilov <aababilov@griddynamics.com>
+Alessio Ababilov <aababilov@griddynamics.com>
 Andrews Medina <andrewsmedina@gmail.com>
 Andy Chong <andycjw@gmail.com>
 Anthony Young <sleepsonthefloor@gmail.com>
@@ -14,34 +14,25 @@ Emma Steimann <emmasteimann@gmail.com>
 Ewan Mellor <ewan.mellor@citrix.com>
 Gabriel Hurley <gabriel@strikeawe.com>
 Ghe Rivero <ghe@debian.org>
-Ghe Rivero <ghe.rivero@stackops.com>
 Hengqing Hu <hudayou@hotmail.com>
 Ivan Kolodyazhny <e0ne@e0ne.info>
-Jake Dahn <admin@jakedahn.com>
-jakedahn <jake@ansolabs.com>
 Jake Dahn <jake@ansolabs.com>
 Jake Zukowski <jake@ponyloaf.com>
 James E. Blair <james.blair@rackspace.com>
-jaypipes <jaypipes@gmail.com>
 Jay Pipes <jaypipes@gmail.com>
-jeffjapan <jeffjapan@gmail.com>
 Jeffrey Wilcox <jeffjapan@gmail.com>
 Jesse Andrews <anotherjesse@gmail.com>
-Joe Heck <heckj@mac.com>
 Joseph Heck <heckj@mac.com>
 Joshua McKenty <joshua@pistoncloud.com>
 Julien Danjou <julien.danjou@enovance.com>
 Ken Pepple <ken.pepple@gmail.com>
-lzyeval <lzyeval@gmail.com>
 Mark Gius <launchpad@markgius.com>
-Mark Gius <mgius7096@gmail.com>
 Michael Szilagyi <mszilagyi@gmail.com>
 Mike Perez <thingee@gmail.com>
 Mike Scherbakov <mihgen@gmail.com>
 Monty Taylor <mordred@inaugust.com>
 Neil Johnston <onewheeldrive.net@gmail.com>
 Paul McMillan <paul.mcmillan@nebula.com>
-sleepsonthefloor <sleepsonthefloor@gmail.com>
 Stephane Angot <sa@hydre.org>
 termie <github@anarkystic.com>
 Tihomir Trifonov <t.trifonov@gmail.com>
@@ -50,6 +41,5 @@ Tomasz 'Zen' Napierala <tomasz@napierala.org>
 Tres Henry <tres@treshenry.net>
 Vishvananda Ishaya <vishvananda@gmail.com>
 Yuriy Taraday <yorik.sar@gmail.com>
-Yuriy Taraday <yorik@ytaraday>
 ZhongYue Luo <lzyeval@gmail.com>
 Ziad Sawalha <github@highbridgellc.com>
