add table column verbose_name to make it into translation
 * name include "Actions", "Status", "Fingerprint"
 * updated all locale .po files
 * related strings for network panel is removed in .po due to updates

Change-Id: I664aa79555f52150c24ced8568a685496a1f2727

--- a/AUTHORS
+++ b/AUTHORS
@@ -22,6 +22,7 @@ James E. Blair <james.blair@rackspace.com>
 Jay Pipes <jaypipes@gmail.com>
 Jeffrey Wilcox <jeffjapan@gmail.com>
 Jesse Andrews <anotherjesse@gmail.com>
+Jim Yeh <lemonlatte@gmail.com>
 Joseph Heck <heckj@mac.com>
 Joshua McKenty <joshua@pistoncloud.com>
 Julien Danjou <julien.danjou@enovance.com>
