Adding the ability to configure password strength in the local_settings. Fixes bug 948317
Change-Id: I96e3838ab6675e7282172e56be3f0359065caccb

--- a/AUTHORS
+++ b/AUTHORS
@@ -23,6 +23,7 @@ Jay Pipes <jaypipes@gmail.com>
 Jeffrey Wilcox <jeffjapan@gmail.com>
 Jesse Andrews <anotherjesse@gmail.com>
 Jim Yeh <lemonlatte@gmail.com>
+John Postlethwait <john.postlethwait@nebula.com>
 Joseph Heck <heckj@mac.com>
 Joshua McKenty <joshua@pistoncloud.com>
 Julien Danjou <julien.danjou@enovance.com>
