Add missing docs files in tarball
Fix MANIFEST.in to include a few missing files in the docs.
Fixes bug 954910.

Change-Id: I8916dfb139607d33f9053a33b082b6eb44b00f3e

--- a/AUTHORS
+++ b/AUTHORS
@@ -37,6 +37,7 @@ Neil Johnston <onewheeldrive.net@gmail.com>
 Paul McMillan <paul.mcmillan@nebula.com>
 Stephane Angot <sa@hydre.org>
 termie <github@anarkystic.com>
+Thierry Carrez <thierry@openstack.org>
 Tihomir Trifonov <t.trifonov@gmail.com>
 Todd Willey <todd@ansolabs.com>
 Tomasz 'Zen' Napierala <tomasz@napierala.org>
